# umble.tools.parquet.parley

./: .gitignore  README.md  index.html  launch-parquet-parley.bat  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: engine.rs  errors.rs  jobs.rs  lib.rs  main.rs  models.rs  sql.rs
src/components/: CellInspector.tsx  DataGrid.tsx  DatasetHeader.tsx  FacetSidebar.tsx  StatusBar.tsx  Toolbar.tsx  TransformPanel.tsx
src/lib/: api.ts  format.ts  recipe.test.ts  recipe.ts
